[package]
name = "lp2p"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "query"
path = "src/query.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
path = "src/lib.rs"
name = "lp2p"

[dependencies]
cbor4ii = { version = "1.0.0", features = ["serde1"] }
clap = { version = "4.5.32", features = ["derive"] }
libp2p = { version = "0.55.0", features = [
    "cbor",
    "dns",
    "identify",
    "macros",
    "noise",
    "rendezvous",
    "request-response",
    "tcp",
    "tokio",
    "websocket",
    "yamux",
    "kad",
    "serde",
    "ping",
    "autonat",
] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
